# Portfolio

./: README.md
C_and_Cpp_Projects/AeroTwin/: .gitignore  CMakeLists.txt  README.md  avionics.cpp  dashboard.js  package.json
C_and_Cpp_Projects/AeroTwin/backend/: schema.sql  telemetry.proto
C_and_Cpp_Projects/AeroTwin/backend/include/: TelemetryDB.h
C_and_Cpp_Projects/AeroTwin/control/include/: Control.h
C_and_Cpp_Projects/AeroTwin/control/src/: Control.cpp
C_and_Cpp_Projects/AeroTwin/docs/: aerodynamics_math.md  math_guide.md
C_and_Cpp_Projects/AeroTwin/estimation/include/: KalmanFilter.h
C_and_Cpp_Projects/AeroTwin/estimation/src/: KalmanFilter.cpp
C_and_Cpp_Projects/AeroTwin/frontend/: dashboard.html  index.html
C_and_Cpp_Projects/AeroTwin/inverse/include/: Estimator.h
C_and_Cpp_Projects/AeroTwin/inverse/src/: Estimator.cpp
C_and_Cpp_Projects/AeroTwin/ml/: train_pinn.py
C_and_Cpp_Projects/AeroTwin/ml/include/: NeuralSurrogate.h
C_and_Cpp_Projects/AeroTwin/scripts/: validate.py  validate_system.py
C_and_Cpp_Projects/AeroTwin/server/: index.js  sim.js
C_and_Cpp_Projects/AeroTwin/simulation/: main.cpp
C_and_Cpp_Projects/AeroTwin/simulation/include/: Dynamics.h
C_and_Cpp_Projects/AeroTwin/simulation/src/: Dynamics.cpp
C_and_Cpp_Projects/AeroTwin/vision/include/: Vision.h
C_and_Cpp_Projects/AeroTwin/vision/src/: Vision.cpp
Carboncopies_Internship_Projects/: IF_Network_Emulation.py  IF_Network_README.md  LIFBehaviralEmulationProject.py  PROJECT_SUMMARY.md  SNNBehavioralEmulation.py
Fish_Schooling_Project/: FinalModel (1).nlogo  Placeholder.txt  README.md
(+56 files in other folders)
